--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -8,6 +8,7 @@
   "editName": "Edit Name",
   "enterName": "Enter name",
   "done": "Done",
+  "profile": "Profile",
   "adjustParticipants": "Adjust Number of Participants",
   "swipeHint": "Swipe right for Light, left for Dark\nLong press for System Theme",
   "currentTheme": "Current",
@@ -21,5 +22,9 @@
   "language": "Language",
   "english": "English",
   "russian": "Russian",
-  "kazakh": "Kazakh"
+  "kazakh": "Kazakh",
+  "savePreferences": "Save Preferences",
+  "logout": "Logout",
+  "login": "Login",
+  "guestMode": "Guest Mode"
 }
