Divided into separate files for code opt. Added History, Firebase logics, Sessions for history, error try-catch, offline mode, banners

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -26,5 +26,6 @@
   "savePreferences": "Save Preferences",
   "logout": "Logout",
   "login": "Login",
+  "register": "Register",
   "guestMode": "Guest Mode"
 }
