--- a/lib/l10n/app_ru.arb
+++ b/lib/l10n/app_ru.arb
@@ -26,5 +26,6 @@
   "savePreferences": "Save Preferences",
   "logout": "Logout",
   "login": "Login",
+  "register": "Register",
   "guestMode": "Guest Mode"
 }
