--- a/lib/l10n/app_kk.arb
+++ b/lib/l10n/app_kk.arb
@@ -23,9 +23,19 @@
   "english": "Ағылшын",
   "russian": "Орысша",
   "kazakh": "Қазақша",
-  "savePreferences": "Save Preferences",
-  "logout": "Logout",
-  "login": "Login",
-  "register": "Register",
-  "guestMode": "Guest Mode"
+  "savePreferences": "Параметрлерді сақтау",
+  "logout": "Шығу",
+  "login": "Кіру",
+  "register": "Регистрация",
+  "guestMode": "Қонақ режимі",
+  "offlineWarning": "Сіз желіден тыссыз. Кейбір мүмкіндіктер қолжетімсіз болуы мүмкін.",
+  "syncNow": "Синхрондау",
+  "loginToSync": "Деректерді синхрондау үшін жүйеге кіріңіз.",
+  "syncedToFirebase": "Деректер Firebase бағдарламасымен синхрондалды!",
+  "syncFailed": "Синхрондау сәтсіз аяқталды",
+  "history": "Тарих",
+  "guestModed": "Сіз қонақ режиміндесіз.",
+  "goToLogin": "Аккаунтқа кіру",
+  "email": "Пошта",
+  "theme": "Тақырып"
 }
