--- a/lib/l10n/app_ru.arb
+++ b/lib/l10n/app_ru.arb
@@ -23,9 +23,19 @@
   "english": "Английский",
   "russian": "Русский",
   "kazakh": "Казахский",
-  "savePreferences": "Save Preferences",
-  "logout": "Logout",
-  "login": "Login",
-  "register": "Register",
-  "guestMode": "Guest Mode"
+  "savePreferences": "Сохранить параметры",
+  "logout": "Выйти",
+  "login": "Войти",
+  "register": "Регистрация",
+  "guestMode": "Гостевой режим",
+  "offlineWarning": "Вы не в сети. Некоторые функции недоступны.",
+  "syncNow": "Синхронизировать",
+  "loginToSync": "Войдите чтобы синхронизировать данные.",
+  "syncedToFirebase": "Данные синхронизированны с Firebase!",
+  "syncFailed": "Ошибка синхронизации",
+  "history": "История",
+  "guestModed": "Вы в гостевом режиме",
+  "goToLogin": "Перейти к входу",
+  "email": "Почта",
+  "theme": "Тема"
 }
